# knowledge-base

./: knowledge.py  pyproject.toml
tmp/: agents.db
tmp/lancedb/combined_documents.lance/_indices/fts/: .managed.json  meta.json
tmp/lancedb/combined_documents.lance/_transactions/: 0-a5a6bc10-35c2-4045-9513-943532df08d9.txn  1-4cf44ca3-d994-4570-9b89-a3a24e1dde87.txn  10-6501bbaf-401f-4e8f-ba62-757256fad105.txn  11-ae03139b-7670-4397-8349-e7333938aae6.txn  2-65d5e467-ca08-4f62-b269-af9370873365.txn  3-9f1ff0e9-7da7-4bcc-8026-65b81d97c40a.txn  4-ffd9abc3-8df5-4c1a-8490-f4bac1c07e50.txn  5-99459dcb-0cf4-4d6a-a3bb-c7cce4f0dfc2.txn  6-429973f9-b576-4198-9636-bb279a7bbce5.txn  7-b4b6909c-8ae2-4fed-b24e-fefd867ecbf4.txn  8-6f8f60cf-453b-4460-b08e-2a82983d318c.txn  9-ff6df2c7-f09b-4d70-9e71-c993961f3d99.txn
tmp/lancedb/combined_documents.lance/_versions/: 1.manifest  10.manifest  11.manifest  12.manifest  2.manifest  3.manifest  4.manifest  5.manifest  6.manifest  7.manifest  8.manifest  9.manifest
tmp/lancedb/combined_documents.lance/data/: 0e5c614d-89fe-4143-9880-11845980584b.lance  26ff1090-64ea-4a87-b9fe-ddd41c1b3a1a.lance  32d8f635-d90c-4907-99dc-f7bd1ebe82f0.lance  4099780c-8ad3-4cb9-8a24-08e87be7a0d8.lance  46000d1a-8722-4f5d-8354-9fd98dd66fcd.lance  54efcf82-ea62-48c7-ab4e-ca942923fe44.lance  a2d48761-fdea-4a96-aca6-a32e8ef28611.lance  b38a6069-7717-4609-bfba-ed0e9bc5fb50.lance  c310ad0a-9eb2-4ae9-aa1e-3af5c459895e.lance  c8351a58-89b2-47ef-b182-5b6fd94a5c94.lance  dbfbe22c-91a1-4066-b9d7-d8f422f6c0bf.lance
